--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           {
             type: 'why',
             title: 'Why Culture Matters',
-            points: ['Talent expectations are meaning-driven', 'Culture prevents risk and reinforces consistency', 'Designed with intention, not by accident'],
+            points: ['Talent expectations are meaning-driven', 'A healthy culture minimises risk and reinforces consistency', 'Designed with intention, not by accident'],
             highlight: 'Treat culture like a product. define, build, test, iterate.',
             totalSteps: 5,
           },
